first pass at reproduction
no crossover or mutation yet, but mate scan basic done + life force correlation to red color

--- a/p5_Prototype/index.html
+++ b/p5_Prototype/index.html
@@ -8,6 +8,7 @@
 
   </head>
   <body>
+    <script src="DNA.js"></script>
     <script src="critter.js"></script>
     <script src="ecosystem.js"></script>
     <script src="sketch.js"></script>
