--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script> -->
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
 <!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script> -->
