clientside funds monitor prototype

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -15,7 +15,7 @@
     <script src="../modules/critter.js"></script>
     <script src="../modules/ecosystem.js"></script>
     <script src="../modules/food.js"></script> -->
-    
+    <script src="socketCommands.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
