--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -8,14 +8,20 @@
 <!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script> -->
 <!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script> -->
     <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <!-- <script src="https://unpkg.com/p5.touchgui@0.5.2/lib/p5.touchgui.js"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <div id='ecosystemCanvas'></div>
+    <div id="critterCreation"></div>
     <!-- <script src="../modules/corpse.js"></script>
     <script src="../modules/critter.js"></script>
     <script src="../modules/ecosystem.js"></script>
     <script src="../modules/food.js"></script> -->
     <script src="socketCommands.js"></script>
+    <!-- <script src="ecosystemSketch.js"></script> -->
+    <script src="critterOverlay.js"></script>
+    <script src="creation.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
