color picker, starting life, lifeForce, poopSlider

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -14,6 +14,11 @@
   <body>
     <div id='ecosystemCanvas'></div>
     <div id="critterCreation"></div>
+    <a target="_blank" href="https://icons8.com/icons/set/snail">Snail icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icons/set/rabbit">Rabbit icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icons/set/elephant">Elephant icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icons/set/leopard">Leopard icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <a target="_blank" href="https://icons8.com/icons/set/dog-pooping">Dog Pooping icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
     <!-- <script src="../modules/corpse.js"></script>
     <script src="../modules/critter.js"></script>
     <script src="../modules/ecosystem.js"></script>
