creation menu update, 16:9 layout, basics of all sections
updated readme with other goals too. used figma for first time!

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -12,9 +12,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   </head>
   <body>
-    <div id='banner'></div>
-    <div id='ecosystemCanvas'></div>
-    <div id="creationCanvas"></div>
+    <div id='banner'></div><div id='ecosystemCanvas'><div id="creationCanvas"></div></div>
     <div id='credits'>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/snail">Snail icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/rabbit">Rabbit icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
