act of god interface basic structure
server functions, socket events, client UI panel with fade in/out, condorcet-lite voting function

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id='banner'></div>
     <div id='ecosystemCanvas'>
+      <!-- <div id='godPanelDiv'></div> -->
       <div id='orgList'></div>
       <div id="creationCanvas"></div>
       <!-- <div id="creationCanvas"></div> -->
