--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -24,7 +24,8 @@
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/rabbit">Rabbit icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/elephant">Elephant icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/leopard">Leopard icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
-      <a class="credits" target="_blank" href="https://icons8.com/icons/set/dog-pooping">Dog Pooping icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a>
+      <a class="credits" target="_blank" href="https://icons8.com/icons/set/dog-pooping">Dog Pooping icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
+      <a href="https://icons8.com/icon/111409/question-mark">Question Mark icon by Icons8</a>
     </div>
     <!-- <script src="../modules/corpse.js"></script>
     <script src="../modules/critter.js"></script>
