voting process and functions working
also updating creation menu if new conduit targets -- before was only adding to dropdown on deposit

Changed question icon

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -25,7 +25,8 @@
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/elephant">Elephant icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/leopard">Leopard icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
       <a class="credits" target="_blank" href="https://icons8.com/icons/set/dog-pooping">Dog Pooping icon</a> by <a target="_blank" href="https://icons8.com">Icons8</a> <br>
-      <a href="https://icons8.com/icon/111409/question-mark">Question Mark icon by Icons8</a>
+      <a target="_blank" href="https://icons8.com/icons/set/question-mark">Question Mark icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+      <!-- <a href="https://icons8.com/icon/111409/question-mark">Question Mark icon by Icons8</a> -->
     </div>
     <!-- <script src="../modules/corpse.js"></script>
     <script src="../modules/critter.js"></script>
