act of god: creation
added new critter creation menu just for community creation, button that opens that menu

socket event getSeedCritters

generate new critter from seeds via frankenstein

added cancel button instead of reusing modeButton...

updated critter creation god name with username

prevented critter creation to crash server if a critter name had less than two characters

also hid modeButton until they log in

--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -17,6 +17,8 @@
       <!-- <div id='godPanelDiv'></div> -->
       <div id='orgList'></div>
       <div id="creationCanvas"></div>
+      <div id="communityCreationCanvas"></div>
+
       <!-- <div id="creationCanvas"></div> -->
     </div>
     <div id='credits'>
@@ -36,6 +38,7 @@
     <script src="ecosystemSketch.js"></script>
     <!-- <script src="critterOverlay.js"></script> -->
     <script src="creationSketch.js"></script>
+    <script src="communityCreationSketch.js"></script>
     <script src="mainSketch.js"></script>
   </body>
 </html>
