--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -15,7 +15,9 @@
     <div id='banner'></div>
     <div id='ecosystemCanvas'>
       <!-- <div id='godPanelDiv'></div> -->
-      <div id='orgList'></div>
+      <!-- <div id='orgList'></div> -->
+      <!-- <div id='godsDonationList'></div> -->
+      <!-- <div id='godsInvolvementList'></div> -->
       <div id="creationCanvas"></div>
       <div id="communityCreationCanvas"></div>
 
