--- a/prototypes/serverDB_test/public/index.html
+++ b/prototypes/serverDB_test/public/index.html
@@ -18,6 +18,8 @@
       <!-- <div id='orgList'></div> -->
       <!-- <div id='godsDonationList'></div> -->
       <!-- <div id='godsInvolvementList'></div> -->
+      <div id='donationsPanelDiv'></div>
+
       <div id="creationCanvas"></div>
       <div id="communityCreationCanvas"></div>
 
